--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,4 +1,4 @@
-$font: 'Poppins', sans-serif
+$font: 'Montserrat', sans-serif
 $fa-brands: "Font Awesome 5 Brands"
 $fa-free: "Font Awesome 5 Free"
 
