--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -17,8 +17,9 @@
     overflow: hidden
   &__col
     &::before
-      font-size: 30px
+      font-size: 3rem
       display: block
+      // text-align: center
   &__wrap
     display: flex
     justify-content: center
@@ -34,29 +35,16 @@
         font-weight: bold
         font-size: 2rem
         margin-top: 0
+        margin-bottom: 4rem
       &_light
-        font-size: 12px
+        font-size: 1rem
         font-weight: 300
+        margin-bottom: 10px
         &::before
           font-size: 14px
     &__item
       color: white
-  &__dot
-    background: white
-    border: none
-    color: $black
-    padding: 15px 10px
-    width: 30%
-    position: relative
-    text-align: center
-    bottom: -6px
-    +screen_md
-      width: 25%
-    +screen_lg
-      width: 20%
-    &:focus, &:hover
-      outline: none 
-      color: $pink
+      font-size: 1.5rem
     &__wrap
       position: relative
       top: 0
@@ -111,3 +99,25 @@
       background: $pink
 
 
+.first
+  height: 80vh
+  display: flex
+  align-items: center
+  justify-content: center
+
+.main
+  font-size: 3rem
+
+h3, h4
+  font-weight: lighter
+
+.text_selected
+  color: $pink
+  font-weight: bold
+
+.price
+  padding: 0 10px 
+  background: $pink
+  font-size: 32px
+  font-weight: bold
+  display: inline-block
