--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -13,19 +13,21 @@
 .slider
   background: $black
   position: relative
+  padding-top: 80px
   +screen_md
     overflow: hidden
+  &__heading
+    text-align: right
+  &__card
+    margin: 30px
+    padding: 30px
+    background: white
+    color: $black
+    height: 100%
   &__col
     &::before
       font-size: 3rem
       display: block
-      // text-align: center
-  &__wrap
-    display: flex
-    justify-content: center
-    align-items: center
-    +screen_md
-      min-height: 500px
   &__content
     padding: 50px 0
     color: white
@@ -40,8 +42,10 @@
         font-size: 1rem
         font-weight: 300
         margin-bottom: 10px
+        display: flex
         &::before
           font-size: 14px
+          margin-top: 3px
     &__item
       color: white
       font-size: 1.5rem
@@ -100,10 +104,23 @@
 
 
 .first
-  height: 80vh
+  height: calc(100vh - 80px)
   display: flex
   align-items: center
   justify-content: center
+
+.second
+  background: white
+  padding: 40px 0
+  +screen_md
+    padding: 80px 0
+  .slider__content__text_title
+    color: $black
+
+.third
+  padding-bottom: 40px
+  .slider__content__text_title
+    margin-bottom: 40px
 
 .main
   font-size: 3rem
@@ -121,3 +138,12 @@ h3, h4
   font-size: 32px
   font-weight: bold
   display: inline-block
+  margin-top: 5px
+  color: white
+
+.block
+  &_devider
+    height: 20px
+    width: 100%
+    background: white
+  
