--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,7 +1,13 @@
 
 
 .header
-  position: relative
+  position: fixed
+  z-index: 1000
+  top: 0
+  left: 0
+  right: 0
+  background: white
+
   &_upper
     background: white
 
