--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -1,18 +1,3 @@
-.fade-in 
-  animation-name: fade
-  animation-duration: 1.5s
-
-.fade-out 
-  animation-name: fade
-  animation-duration: 1.5s
-
-@keyframes fade 
-  from 
-    opacity: .4
-  to 
-    opacity: 1
-
-
 .slider
   background: $black
   position: relative
@@ -23,11 +8,12 @@
     text-align: right
     font-weight: bold
   &__card
-    margin: 30px
     padding: 30px
     background: white
     color: $black
     height: 100%
+    +screen_lg
+      margin: 30px
   &__col
     &::before
       font-size: 3rem
@@ -106,12 +92,14 @@
       background: white
       color: $pink
 
-
 .first
-  height: calc(100vh - 80px)
+  margin-top: 150px
   display: flex
   align-items: center
   justify-content: center
+  +screen_md
+    height: calc(100vh - 80px)
+    margin-top: 0
 
 .second, .fourth
   background: white
@@ -132,6 +120,7 @@
 
 .main
   font-size: 3rem
+  word-break: break-word
 
 h3, h4
   font-weight: lighter
@@ -157,17 +146,22 @@ h3, h4
   
 
 %step
-  font-size: 3rem
+  font-size: 2rem
   display: flex
   background: #d53e5c
-  width: 100px
-  height: 100px
+  width: 50px
+  height: 50px
   align-items: center
   justify-content: center
   border-radius: 50%
   color: white
   margin-right: 30px
-  flex: 0 0 100px
+  flex: 0 0 50px
+  +screen_md
+    width: 100px
+    height: 100px
+    flex-basis: 100px
+    font-size: 3rem
 
 @each $step in 1, 2, 3
   .step#{$step}
